update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Tim-and-Tip-b-or-The-Adventures-of-a-Boy-and-a-Dog_74436
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74436-h/images/cover_sm.jpg
 creator:
   author:
     agent_name: Otis, James
@@ -14,6 +17,8 @@ creator:
     - https://en.wikipedia.org/wiki/James_Otis_Kaler
     - http://www.gutenberg.org/ebooks/author/49402
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74436#Tim-and-Tip-b-or-The-Adventures-of-a-Boy-and-a-Dog
 gutenberg_issued: '2024-09-18'
 gutenberg_type: Text
 identifiers:
